// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component should render link if user is  logged in 1`] = `
<span>
  Doctors
</span>
`;

exports[`Navbar Component should render link if user is  logged in 2`] = `
<span>
  Reservations
</span>
`;

exports[`Navbar Component should render link if user is  logged in 3`] = `
<span>
  Book Appointments
</span>
`;
